--- a/cms-core/pom.xml
+++ b/cms-core/pom.xml
@@ -29,6 +29,11 @@
 			<version>1.3.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.simplejavamail</groupId>
+			<artifactId>simple-java-mail</artifactId>
+			<version>8.12.6</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
